system update, hyprland keybindings overhaul

--- a/config/hypr/keybindings.conf
+++ b/config/hypr/keybindings.conf
@@ -1,184 +1,136 @@
+# Modifiers
+$mod1 = CTRL
+$mod2 = SUPER
+$mod3 = CTRL SHIFT
+$mod4 = CTRL SUPER
+$mod5 = SHIFT SUPER
+$mod6 = CTRL ALT
+$mod7 = SHIFT ALT
 
-# █▄▀ █▀▀ █▄█ █▄▄ █ █▄░█ █▀▄ █ █▄░█ █▀▀ █▀
-# █░█ ██▄ ░█░ █▄█ █ █░▀█ █▄▀ █ █░▀█ █▄█ ▄█
+# Select/move/resize windows
+# --------------------------
+## Select focused window
+bind = $mod3, h, movefocus, l
+bind = $mod3, j, movefocus, d
+bind = $mod3, k, movefocus, u
+bind = $mod3, l, movefocus, r
+## Resize window
+binde = $mod6, h, resizeactive, -30 0
+binde = $mod6, j, resizeactive, 0 30
+binde = $mod6, k, resizeactive, 0 -30
+binde = $mod6, l, resizeactive, 30 0
+## Move window
+bind = $mod4, h, movewindow, l
+bind = $mod4, j, movewindow, d
+bind = $mod4, k, movewindow, u
+bind = $mod4, l, movewindow, r
+## Select focused workspace
+bind = $mod3, s, workspace, r-1
+bind = $mod3, g, workspace, r+1
+bind = $mod3, 1, workspace, 1
+bind = $mod3, 2, workspace, 2
+bind = $mod3, 3, workspace, 3
+bind = $mod3, 4, workspace, 4
+bind = $mod3, 5, workspace, 5
+bind = $mod3, 6, workspace, 6
+bind = $mod3, 7, workspace, 7
+bind = $mod3, 8, workspace, 8
+bind = $mod3, 9, workspace, 9
+bind = $mod3, 0, workspace, 10
+## Move window to workspace
+bind = $mod5, s, movetoworkspace, r-1
+bind = $mod5, g, movetoworkspace, r+1
+bind = $mod5, 1, movetoworkspace, 1
+bind = $mod5, 2, movetoworkspace, 2
+bind = $mod5, 3, movetoworkspace, 3
+bind = $mod5, 4, movetoworkspace, 4
+bind = $mod5, 5, movetoworkspace, 5
+bind = $mod5, 6, movetoworkspace, 6
+bind = $mod5, 7, movetoworkspace, 7
+bind = $mod5, 8, movetoworkspace, 8
+bind = $mod5, 9, movetoworkspace, 9
+bind = $mod5, 0, movetoworkspace, 10
+## Silent move window to workspace
+bind = $mod7, s, movetoworkspacesilent, r-1
+bind = $mod7, g, movetoworkspacesilent, r+1
+bind = $mod7, 1, movetoworkspacesilent, 1
+bind = $mod7, 2, movetoworkspacesilent, 2
+bind = $mod7, 3, movetoworkspacesilent, 3
+bind = $mod7, 4, movetoworkspacesilent, 4
+bind = $mod7, 5, movetoworkspacesilent, 5
+bind = $mod7, 6, movetoworkspacesilent, 6
+bind = $mod7, 7, movetoworkspacesilent, 7
+bind = $mod7, 8, movetoworkspacesilent, 8
+bind = $mod7, 9, movetoworkspacesilent, 9
+bind = $mod7, 0, movetoworkspacesilent, 10
+## Toggle special workspace
+bind = $mod3, d, togglespecialworkspace
+bind = $mod3, f, togglespecialworkspace
+## Move window to special workspace
+bind = $mod5, d, movetoworkspace, special 
+bind = $mod5, f, movetoworkspace, previous
+## Silent move window to special workspace
+bind = $mod7, d, movetoworkspacesilent, special 
+bind = $mod7, f, movetoworkspacesilent, previous
+## Go to next empty ws
+bind = $mod3, n, workspace, emptynm
 
+# Group management
+# ----------------
+#
+## Move window or group
+bind = $mod5, h, movewindoworgroup, l 
+bind = $mod5, j, movewindoworgroup, d
+bind = $mod5, k, movewindoworgroup, u
+bind = $mod5, l, movewindoworgroup, r
+## Change active window in group
+bind = $mod5, n, changegroupactive, f
+bind = $mod5, p, changegroupactive, b
+## Toggle active group window into group
+bind = $mod5, o, togglegroup
 
-# See https://wiki.hyprland.org/Configuring/Keywords/ for more
-# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-
-# Main modifier
-$navMod = SUPER
-$ctrlMod = CTRL
-$optMod = ALT
-$mainMod = $ctrlMod SHIFT
-$confMod = $ctrlMod $navMod
-$auxMod = $navMod SHIFT
-$totalMod = $navMod $ctrlMod SHIFT
-
-# assign apps
-$term = kitty ta
-$editor = code-insiders
-$file = kitty nv
+# Commonly used applications
+# --------------------------
+$terminal = kitty
 $browser = firefox
+$filemanager = kitty nv
 
-bind=$mainMod,R,submap,resize
+bind = $mod3, t, exec, $terminal
+bind = $mod3, b, exec, $browser
+bind = $mod3, m, exec, $filemanager
 
-submap=resize
+# Rofi launchers
+# --------------
+bind = $mod1, SPACE, exec, pkill -x rofi || rofilaunch.sh d # launch desktop applications
+bind = $mod5, w, exec, pkill -x rofi || rofilaunch.sh w # switch between desktop applications
+bind = $mod5, e, exec, pkill -x rofi || rofilaunch.sh f # browse system files 
+bind = $mod5, t, exec, pkill -x rofi || themeselect.sh # theme select menu 
+bind = $mod5, q, exec, pkill -x rofi || swwwallselect-patched.sh # rofi wall select menu 
+bind = $mod5, r, exec, pkill -x rofi || rofiselect.sh # rofi style select menu
 
-bind=,left,resizeactive,-30 0
-bind=,right,resizeactive,30 0
-bind=,up,resizeactive,0 -30
-bind=,down,resizeactive,0 30
-bind=,escape,submap,reset
+# Waybar modes
+# ------------
+bind = $mod6, n, exec, waybar-confgen-hyprdots n # next waybar mode
+bind = $mod6, p, exec, waybar-confgen-hyprdots p # previous waybar mode
 
-bind=,h,resizeactive,-30 0
-bind=,l,resizeactive,30 0
-bind=,k,resizeactive,0 -30
-bind=,j,resizeactive,0 30
+# Screenshots
+# -----------
+bind = $mod3, o, exec, screenshot.sh s # drag to snip an area / click on a window to print it
+bind = $mod3, p, exec, screenshot.sh p # print focused monitor
+bind = $mod4, o, exec, sleep 5 && screenshot.sh s # (with 5 second timeout)
+bind = $mod4, p, exec, sleep 5 && screenshot.sh p # (with 5 second timeout) 
 
-bind=$mainMod,R,submap,reset
+# Window control
+# --------------
+bind = $mod2, q, killactive
+bind = $mod2, v, togglefloating
+bind = $mod2, f, fullscreen
+bind = $mod2, s, togglesplit
 
-submap=reset
-
-bind=$mainMod,R,submap,resize
-# Window/Session actions
-bind = $navMod, Q, killactive
-bind = $ctrlMod, F4, killactive
-bind = $navMod, V, togglefloating, # toggle the window on focus to float
-bind = $confMod, F, fullscreen, # toggle the window on focus to fullscreen
-# bind = $confMod, l, exec, swaylock # lock screen
-bind = $mainMod, backspace, exec, wlogout-launcher-hyprland 2 # logout menu
-bind = $navMod, ESCAPE, exec, systemctl-toggle --user waybar.service
-bind = $confMod, SPACE, exec, 1password --quick-access
-
-bind = $navMod, W, togglegroup, # toggle the window on focus to float
-
-# Application shortcuts
-bind = $mainMod, T, exec, kitty ta  # open terminal
-bind = $mainMod, E, exec, $file # open file manager
-#bind = $mainMod, C, exec, $editor # open vscode
-bind = $mainMod, F, exec, $browser # open browser
-
-# Rofi is toggled on/off if you repeat the key presses
-bind = $ctrlMod, SPACE, exec, pkill -x rofi || rofilaunch.sh d # launch desktop applications
-bind = $ctrlMod, TAB, exec, pkill -x rofi || rofilaunch.sh w # switch between desktop applications
-
-#bind = $mainMod, R, exec, pkill -x rofi || rofilaunch.sh f # browse system files
-#bind = $mainMod, V, exec, pkill -x rofi || cliphist.sh c  # open Pasteboard in screen center
-bind = $confMod, T, exec, pkill -x rofi || themeselect.sh # theme select menu
-bind = $confMod, A, exec, pkill -x rofi || rofiselect.sh # rofi style select menu
-bind = $confMod, W, exec, pkill -x rofi || swwwallselect-patched.sh # rofi wall select menu
-bind = $mainMod, COMMA, exec, rofi -modi emoji -show emoji
-
-# Wallpaper control
-#bind = $auxMod, right, exec, swimctl next # next wallpaper
-#bind = $auxMod, left, exec, swimctl previous # previous wallpaper
-bind = $confMod, mouse_down, exec, swimctl next
-bind = $confMod, mouse_up, exec, swimctl previous
-
-# Audio control
-# bindl  = , F10, exec, volumecontrol.sh -o m # toggle audio mute
-# bindel = , F11, exec, volumecontrol.sh -o d # decrease volume
-# bindel = , F12, exec, volumecontrol.sh -o i # increase volume
-bindl  = , XF86AudioMute, exec, volumecontrol.sh -o m # toggle audio mute
-bindl  = , XF86AudioMicMute, exec, volumecontrol.sh -i m # toggle microphone mute
-bindel = , XF86AudioLowerVolume, exec, volumecontrol.sh -o d # decrease volume
-bindel = , XF86AudioRaiseVolume, exec, volumecontrol.sh -o i # increase volume
-bindl  = , XF86AudioPlay, exec, playerctl play-pause
-bindl  = , XF86AudioPause, exec, playerctl play-pause
-bindl  = , XF86AudioNext, exec, playerctl next
-bindl  = , XF86AudioPrev, exec, playerctl previous
-
-# Waybar Control
-bind = $mainMod, n, exec, waybar-confgen-hyprdots n # next waybar mode
-bind = $mainMod, p, exec, waybar-confgen-hyprdots p # previous waybar mode
-
-# Custom Scripts
-bind = $mainMod, ESCAPE, exec, kitty -e htop  # open htop/btop if installed or default to top (system monitor)
-#bind = $confMod, K, exec, keyboardswitch.sh # change keyboard layout
-
-# Brightness control copper.packages.nailgun
-bindel = , XF86MonBrightnessUp, exec, brightnesscontrol.sh i # increase brightness
-bindel = , XF86MonBrightnessDown, exec, brightnesscontrol.sh d # decrease brightness
-
-# Screenshot/Screencapture
-bind = $auxMod, O, exec, screenshot.sh s # drag to snip an area / click on a window to print it
-bind = $auxMod, P, exec, screenshot.sh p # print focused monitor
-bind = ,print, exec, screenshot.sh p  # print all monitor outputs
-
-# Move focus with mainMod + arrow keys
-bind = $mainMod, h, movefocus, l
-bind = $mainMod, l, movefocus, r
-bind = $mainMod, k, movefocus, u
-bind = $mainMod, j, movefocus, d
-
-# Switch workspaces with mainMod + [0-9]
-bind = $mainMod, 1, workspace, 1
-bind = $mainMod, 2, workspace, 2
-bind = $mainMod, 3, workspace, 3
-bind = $mainMod, 4, workspace, 4
-bind = $mainMod, 5, workspace, 5
-bind = $mainMod, 6, workspace, 6
-bind = $mainMod, 7, workspace, 7
-bind = $mainMod, 8, workspace, 8
-bind = $mainMod, 9, workspace, 9
-bind = $mainMod, 0, workspace, 10
-
-# Switch workspaces relative to the active workspace with mainMod + CTRL + [←→]
-bind = $confMod, l, workspace, r+1 
-bind = $confMod, h, workspace, r-1
-
-# move to the first empty workspace instantly with mainMod + CTRL + [↓]
-bind = $auxMod, down, workspace, empty 
-# will reset the submap, meaning end the current one and return to the global one
-
-# Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $confMod, 1, movetoworkspace, 1
-bind = $confMod, 2, movetoworkspace, 2
-bind = $confMod, 3, movetoworkspace, 3
-bind = $confMod, 4, movetoworkspace, 4
-bind = $confMod, 5, movetoworkspace, 5
-bind = $confMod, 6, movetoworkspace, 6
-bind = $confMod, 7, movetoworkspace, 7
-bind = $confMod, 8, movetoworkspace, 8
-bind = $confMod, 9, movetoworkspace, 9
-bind = $confMod, 0, movetoworkspace, 10
-
-# Move active window to a relative workspace with mainMod + CTRL + ALT + [←→]
-bind = $totalMod, LEFT, movetoworkspace, r-1
-bind = $totalMod, RIGHT, movetoworkspace, r+1
-
-# Move active window around current workspace with mainMod + SHIFT + CTRL [←→↑↓]
-bind = $auxMod, h, movewindow, l
-bind = $auxMod, l, movewindow, r
-bind = $auxMod, k, movewindow, u
-bind = $auxMod, j, movewindow, d
-
-# Scroll through existing workspaces with mainMod + scroll
-#bind = $totalMod, mouse_down, workspace, e+1
-#bind = $totalMod, mouse_up, workspace, e-1
-
-# Move/Resize windows with mainMod + LMB/RMB and dragging
-bindm = $mainMod, mouse:272, movewindow
-bindm = $mainMod, mouse:273, resizewindow
-
-# Special workspaces (scratchpad)
-bind = $confMod, S, movetoworkspacesilent, special
-bind = $mainMod, S, togglespecialworkspace,
-
-# Toggle Layout
-bind = $mainMod, SPACE, togglesplit, # dwindle
-
-
-
-# Move window silently to workspace Super + Alt + [0-9]
-bind = $auxMod, 1, movetoworkspacesilent, 1
-bind = $auxMod, 2, movetoworkspacesilent, 2
-bind = $auxMod, 3, movetoworkspacesilent, 3
-bind = $auxMod, 4, movetoworkspacesilent, 4
-bind = $auxMod, 5, movetoworkspacesilent, 5
-bind = $auxMod, 6, movetoworkspacesilent, 6
-bind = $auxMod, 7, movetoworkspacesilent, 7
-bind = $auxMod, 8, movetoworkspacesilent, 8
-bind = $auxMod, 9, movetoworkspacesilent, 9
-bind = $auxMod, 0, movetoworkspacesilent, 10
+# System control
+# --------------
+bind = $mod5, RETURN, exec, wlogout-launcher-hyprland 2 # logout menu
+bind = $mod5, ESCAPE, exec, kitty htop
+bind = $mod5, TAB, exec, swaylock  # lock screen
+bind = $mod5, equal, exec, hyprctl kill # select window to kill
+bind = $mod4, SPACE, exec, 1password --quick-access
