remove copper deps

--- a/config/hypr/entry.conf
+++ b/config/hypr/entry.conf
@@ -6,8 +6,12 @@
 monitor=Unknown-1,disable
 monitor=DP-2,highres,auto,1
 
+general {
+  allow_tearing = true
+}
+
 misc {
-    vrr = 1
+    vrr = 0
     vfr = 1
 }
 
