--- a/config/hypr/keybindings.conf
+++ b/config/hypr/keybindings.conf
@@ -134,3 +134,23 @@ bind = $mod5, ESCAPE, exec, kitty htop
 bind = $mod5, TAB, exec, swaylock  # lock screen
 bind = $mod5, equal, exec, hyprctl kill # select window to kill
 bind = $mod4, SPACE, exec, 1password --quick-access
+
+# Media keys and brightness
+# -------------------------
+bindl  = , XF86AudioMute, exec, volumecontrol.sh -o m # toggle audio mute
+bindl  = , XF86AudioMicMute, exec, volumecontrol.sh -i m # toggle microphone mute
+bindel = , XF86AudioLowerVolume, exec, volumecontrol.sh -o d # decrease volume
+bindel = , XF86AudioRaiseVolume, exec, volumecontrol.sh -o i # increase volume
+bindl  = , XF86AudioPlay, exec, playerctl play-pause
+bindl  = , XF86AudioPause, exec, playerctl play-pause
+bindl  = , XF86AudioNext, exec, playerctl next
+bindl  = , XF86AudioPrev, exec, playerctl previous
+bindel = , XF86MonBrightnessUp, exec, brightnesscontrol.sh i # increase brightness
+bindel = , XF86MonBrightnessDown, exec, brightnesscontrol.sh d # decrease brightness
+
+# Mouse controls
+# --------------
+## Move and resize windows
+bindm = $mod3, mouse:272, movewindow
+bindm = $mod3, mouse:273, resizewindow
+
