--- a/config/hypr/keybindings.conf
+++ b/config/hypr/keybindings.conf
@@ -6,6 +6,7 @@ $mod4 = CTRL SUPER
 $mod5 = SHIFT SUPER
 $mod6 = CTRL ALT
 $mod7 = SHIFT ALT
+$mod8 = ALT
 
 # Select/move/resize windows
 # --------------------------
@@ -125,6 +126,7 @@ bind = $mod4, p, exec, sleep 5 && screenshot.sh p # (with 5 second timeout)
 bind = $mod2, q, killactive
 bind = $mod2, v, togglefloating
 bind = $mod2, f, fullscreen
+bind = $mod8, f, fakefullscreen
 bind = $mod2, s, togglesplit
 
 # System control
