--- a/config/hypr/keybindings.conf
+++ b/config/hypr/keybindings.conf
@@ -93,7 +93,7 @@ bind = $mod5, o, togglegroup
 # Commonly used applications
 # --------------------------
 $terminal = kitty
-$browser = firefox
+$browser = google-chrome-stable
 $filemanager = kitty nv
 
 bind = $mod3, t, exec, $terminal
