--- a/config/hypr/entry.conf
+++ b/config/hypr/entry.conf
@@ -11,7 +11,7 @@ general {
 }
 
 misc {
-    vrr = 0
+    vrr = 1
     vfr = 1
 }
 
@@ -21,12 +21,12 @@ misc {
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 # Execute your favorite apps at launch
-exec-once = tmux setenv -g HYPRLAND_INSTANCE_SIGNATURE "$HYPRLAND_INSTANCE_SIGNATURE" 
+# exec-once = tmux setenv -g HYPRLAND_INSTANCE_SIGNATURE "$HYPRLAND_INSTANCE_SIGNATURE" 
 exec-once = wl-paste --type text --watch cliphist store # clipboard store text data
 exec-once = wl-paste --type image --watch cliphist store # clipboard store image data
 # exec-once = obsidian
 # exec-once = thunderbird
-exec-once = 1password
+# exec-once = 1password
 # exec-once = slack
 # exec-once = hypridle
 # exec-once = hyprlock
@@ -134,7 +134,7 @@ decoration {
 
 misc {
     disable_hyprland_logo = 1
-    mouse_move_enables_dpms = true
+    mouse_move_enables_dpms = false
     key_press_enables_dpms = true
     focus_on_activate = true
 }
