--- a/config/hypr/keybindings.conf
+++ b/config/hypr/keybindings.conf
@@ -92,11 +92,11 @@ bind = $mod5, o, togglegroup
 
 # Commonly used applications
 # --------------------------
-$terminal = kitty
+$terminal = kitty /home/max/.nix-profile/bin/ta 
 $browser = google-chrome-stable
 $filemanager = kitty nv
 
-bind = $mod3, t, exec, $terminal
+bind = $mod3, t, exec, $terminal 
 bind = $mod3, b, exec, $browser
 bind = $mod3, m, exec, $filemanager
 
