--- a/config/hypr/entry.conf
+++ b/config/hypr/entry.conf
@@ -11,8 +11,8 @@ general {
 }
 
 misc {
-    vrr = 1
-    vfr = 1
+    vrr = 0
+    vfr = true
 }
 
 
@@ -134,7 +134,7 @@ decoration {
 
 misc {
     disable_hyprland_logo = 1
-    mouse_move_enables_dpms = false
+    mouse_move_enables_dpms = true
     key_press_enables_dpms = true
     focus_on_activate = true
 }
