--- a/config/hypr/entry.conf
+++ b/config/hypr/entry.conf
@@ -11,7 +11,7 @@ general {
 }
 
 misc {
-    vrr = 0
+    vrr = 1
     vfr = true
 }
 
@@ -37,7 +37,7 @@ exec-once = wl-paste --type image --watch cliphist store # clipboard store image
 # Some default env vars.
 
 # TODO: move some environment variables elsewhere?
-#env = XDG_CURRENT_DESKTOP,Hyprland
+#env = XDG_CURRENT_DESKTOP,Hyprlandk
 #env = XDG_SESSION_TYPE,wayland
 #env = XDG_SESSION_DESKTOP,Hyprland
 #env = GDK_BACKEND,wayland
