--- a/config/hypr/entry.conf
+++ b/config/hypr/entry.conf
@@ -124,7 +124,7 @@ master {
 #▄█ █▀▀ ██▄ █▄▄ █ █▀█ █▄▄
 
 decoration {
-  drop_shadow = false
+  drop_shadow = true
   # dim_special = 0.3
   blur {
     enabled = false
