--- a/config/tmux/overrides.conf
+++ b/config/tmux/overrides.conf
@@ -23,6 +23,8 @@ bind C-a copy-mode
 bind % split-window -h -c '#{pane_current_path}'
 bind \" split-window -c '#{pane_current_path}'
 
+bind g display-popup -w 90% -h 90% lazygit
+
 unbind-key t
 bind t if-shell -F '#{==:#{session_name},scratch}' {
   detach-client
