--- a/config/tmux/overrides.conf
+++ b/config/tmux/overrides.conf
@@ -23,8 +23,10 @@ bind C-a copy-mode
 bind % split-window -h -c '#{pane_current_path}'
 bind \" split-window -c '#{pane_current_path}'
 
+# Lazygit
 bind g display-popup -w 90% -h 90% lazygit
 
+# Scratch session
 unbind-key t
 bind t if-shell -F '#{==:#{session_name},scratch}' {
   detach-client
@@ -36,6 +38,15 @@ bind c-t if-shell -F '#{==:#{session_name},scratch}' {
 } {
   display-popup -E "tmux new-session -A -s scratch"
 }
+
+# Obsidian in neovim
+bind l if-shell -F '#{==:#{session_name},obsidian}' {
+  detach-client
+} {
+  display-popup -w 90% -h 90% -E "tmux new-session -A -s obsidian nv -c NotesStart"
+}
+
+
 # Mac OS specific binds and configs
 if-shell "uname | grep -q Darwin" {
   set -g @thumbs-command 'echo -n {} | pbcopy'
