--- a/config/tmux/overrides.conf
+++ b/config/tmux/overrides.conf
@@ -23,8 +23,14 @@ bind C-a copy-mode
 bind % split-window -h -c '#{pane_current_path}'
 bind \" split-window -c '#{pane_current_path}'
 
+# Set session cwd from current pane cwd
+bind - {
+  attach -c "#{pane_current_path}"
+  run-shell 'tmux rename-session "$(basename $(pwd))"'
+}
+
 # Lazygit
-bind g display-popup -w 90% -h 90% lazygit
+bind g display-popup -w 90% -h 90% -E lazygit
 
 # Scratch session
 unbind-key t
