mostly nvim and tmux stuff lol

--- a/config/tmux/overrides.conf
+++ b/config/tmux/overrides.conf
@@ -9,6 +9,7 @@ set -g pane-border-style 'fg=brightblack,bg=default'
 set -g status-interval 1
 set -g allow-passthrough on
 set -g visual-activity off
+set -g focus-events on
 set-option -sa terminal-features ',XXX:RGB'
 set-option -g prefix C-a
 
@@ -62,3 +63,11 @@ if-shell "uname | grep -q Darwin" {
 if-shell "uname | grep -q Linux" {
   set -g @thumbs-command 'echo -n {} | wl-copy'
 }
+
+# Support undercurls in Neovim diagnostics
+# set -g default-terminal "${TERM}"
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
+
+# On focus hook
+set-hook -g pane-focus-in 'display-message "Pane #{pane_index} in #{window_index} of #{session_id}"'
