--- a/config/tmux/overrides.conf
+++ b/config/tmux/overrides.conf
@@ -7,7 +7,6 @@ setw -g mode-keys vi
 set -g pane-active-border-style 'fg=magenta,bg=default'
 set -g pane-border-style 'fg=brightblack,bg=default'
 set -g status-interval 1
-set -g allow-passthrough on
 set -g visual-activity off
 set -g focus-events on
 set-option -sa terminal-features ',XXX:RGB'
@@ -23,6 +22,11 @@ bind C-a copy-mode
 
 bind % split-window -h -c '#{pane_current_path}'
 bind \" split-window -c '#{pane_current_path}'
+
+# Allow passthrough (necessary for displaying images)
+set -g allow-passthrough on
+set -ga update-environment TERM
+set -ga update-environment TERM_PROGRAM
 
 # Set session cwd from current pane cwd
 bind - {
