--- a/config/tmux/overrides.conf
+++ b/config/tmux/overrides.conf
@@ -42,12 +42,12 @@ unbind-key t
 bind t if-shell -F '#{==:#{session_name},scratch}' {
   detach-client
 } {
-  display-popup -E "tmux new-session -A -s scratch"
+  display-popup -w 70% -h 70% -E "tmux new-session -A -s scratch"
 }
 bind c-t if-shell -F '#{==:#{session_name},scratch}' {
   detach-client
 } {
-  display-popup -E "tmux new-session -A -s scratch"
+  display-popup -w 70% -h 70% -E "tmux new-session -A -s scratch"
 }
 
 # Obsidian in neovim
