--- a/config/tmux/overrides.conf
+++ b/config/tmux/overrides.conf
@@ -12,10 +12,10 @@ set-option -sa terminal-features ',XXX:RGB'
 set-option -g prefix C-a
 
 bind z resize-pane -Z
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+# bind h select-pane -L
+# bind j select-pane -D
+# bind k select-pane -U
+# bind l select-pane -R
 bind a copy-mode
 bind C-a copy-mode
 
