--- a/config/tmux/overrides.conf
+++ b/config/tmux/overrides.conf
@@ -22,6 +22,8 @@ bind C-a copy-mode
 bind % split-window -h -c '#{pane_current_path}'
 bind \" split-window -c '#{pane_current_path}'
 
+bind C-q kill-session
+
 # Allow passthrough (necessary for displaying images)
 set -g allow-passthrough on
 set -g visual-activity off
@@ -73,3 +75,7 @@ if-shell "uname | grep -q Linux" {
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
 set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
 
+
+# Joining/sending panes
+bind-key < command-prompt -p "join pane from:" "join-pane -s '%%'"
+bind-key > command-prompt -p "send pane to:" "join-pane -t '%%'"
